[gd_scene load_steps=9 format=3 uid="uid://vmahdk4b546l"]

[ext_resource type="Script" uid="uid://cd0vqgyl7pprb" path="res://Scenes/main_menu.gd" id="1_tt5f1"]
[ext_resource type="Texture2D" uid="uid://dwbouddlhg324" path="res://Assets/Colorprune.svg" id="2_ghw46"]
[ext_resource type="Texture2D" uid="uid://dpw7uhuh7ltwa" path="res://Assets/play.svg" id="3_df05h"]
[ext_resource type="Texture2D" uid="uid://vnwkb5u4amos" path="res://Assets/door-open.svg" id="4_8um5k"]
[ext_resource type="Material" uid="uid://c4h2amqi4ssas" path="res://Scenes/diagonal_crt_shader.tres" id="5_8um5k"]
[ext_resource type="Texture2D" uid="uid://c7svecawodput" path="res://Assets/info.svg" id="6_koqhg"]
[ext_resource type="Script" uid="uid://dhjy5vx0dtimp" path="res://Scenes/DiagonalGlow.gd" id="6_xim88"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xim88"]
content_margin_left = 32.0
content_margin_top = 32.0
content_margin_right = 32.0
content_margin_bottom = 32.0
bg_color = Color(0, 0, 0, 0.282353)
corner_radius_top_left = 48
corner_radius_top_right = 48
corner_radius_bottom_right = 48
corner_radius_bottom_left = 48

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tt5f1")

[node name="ColorRect" type="ColorRect" parent="."]
texture_filter = 2
texture_repeat = 1
material = ExtResource("5_8um5k")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_xim88")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 61.0
offset_top = -253.0
offset_right = 669.0
offset_bottom = 253.0
grow_vertical = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_ghw46")
expand_mode = 5

[node name="VBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/icon = ExtResource("3_df05h")
flat = true
icon_alignment = 1

[node name="InfoButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/icon = ExtResource("3_df05h")
icon = ExtResource("6_koqhg")
flat = true
icon_alignment = 1

[node name="QuitButton" type="Button" parent="VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/icon = ExtResource("4_8um5k")
text = "
"
flat = true
icon_alignment = 1

[node name="InfoPanel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.474
anchor_top = 0.229
anchor_right = 0.927
anchor_bottom = 0.768
offset_left = 0.599915
offset_top = -0.100021
offset_right = 0.799927
offset_bottom = -0.200012
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_xim88")
text = "Shoot according to the color

WASD		: Move
Space		: Jump
Shift		: Run
Q and E	: Switch gun
LMB		: Shoot

Creator	: Fauzan \"Corfliss\" Hanandito
Thanks	: Zakarya - FPS movement template
				  Gunnar Correa - Low poly gun

"
